syntax = "proto3";

package axion.common.v1;

enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_VALIDATION = 1;
  ERROR_CODE_NOT_FOUND = 2;
  ERROR_CODE_UNAUTHORIZED = 3;
  ERROR_CODE_FORBIDDEN = 4;
  ERROR_CODE_INTERNAL = 5;
  ERROR_CODE_DATABASE = 6;
  ERROR_CODE_EXTERNAL_SERVICE = 7;
  ERROR_CODE_CONFLICT = 8;
  ERROR_CODE_RATE_LIMIT_EXCEEDED = 9;
}

message Error {
  ErrorCode code = 1;
  string message = 2;
  string field = 3;  // Для validation ошибок
  map<string, string> metadata = 4;
}
